@@ -47,16 +47,15 @@ function (query = NULL, only.mine = TRUE, only.requestable = FALSE,
         }
         return(batch)
     }
-    request <- batch(GETparameters, pagenumber, pagesize)
-    if(is.null(request$valid))
-        return(request)
-    runningtotal <- request$batch.total
-    pagenumber <- 2
     if(return.all) {
         sortproperty <- "Name"
         sortdirection <- "Ascending"
         pagesize <- "100"
         pagenumber <- "1"
+        request <- batch(GETparameters, pagenumber, pagesize)
+        if(is.null(request$valid))
+            return(request)
+        runningtotal <- request$batch.total
         while(request$total > runningtotal) {
             nextbatch <- batch(GETparameters, pagenumber, pagesize)
             if(is.null(nextbatch$valid))
@@ -68,8 +67,12 @@ function (query = NULL, only.mine = TRUE, only.requestable = FALSE,
                 request$quals <- rbind(request$quals, nextbatch$quals)
             request$pages.returned <- pagesize
             runningtotal <- runningtotal + request$batch.total
-            pagenumber <- pagenumber + 1
+            pagenumber <- as.numeric(pagenumber) + 1
         }
+    } else {
+        request <- batch(GETparameters, pagenumber, pagesize)
+        if(is.null(request$valid))
+            return(request)
     }
     request$batch.total <- NULL
     if(request$valid[1] & verbose)
